Fix index/overlap issue on Equipment Create

--- a/scct/web/css/site.css
+++ b/scct/web/css/site.css
@@ -228,7 +228,7 @@ ul > li >a:hover{
     width: 100%;
     position: fixed;
 	bottom:0;
-	
+	z-index:3;
 }
 /*-----------End footer----------*/
 
